favicon, absent student, fix table headers

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
+      sizes="96x96"
+      href="./images/icons8-star-96.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
       src="https://kit.fontawesome.com/bb8e411a96.js"
       crossorigin="anonymous"
     ></script> -->
-    <link rel="stylesheet" href="/public/FA-6/css/all.css" />
+    <link rel="stylesheet" href="./FA-6/css/all.css" />
 
     <title>Random WORD</title>
 
@@ -34,6 +34,8 @@
       <a class="nav-link" href="table.html">📅</a>
     </header>
     <main>
+      <!--  <a target="_blank" href="https://icons8.com/icon/19295/star">Star</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a> -->
+
       <!-- hide logo for now -->
       <!--  <nav class="nav">
         <div><img src="/images/logo.png" class="nav__logo" alt="" /></div>
