--- a/public/lists.html
+++ b/public/lists.html
@@ -7,8 +7,8 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
+      sizes="96x96"
+      href="./images/icons8-star-96.png"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +20,7 @@
       src="https://kit.fontawesome.com/bb8e411a96.js"
       crossorigin="anonymous"
     ></script> -->
-    <link rel="stylesheet" href="/public/FA-6/css/all.css" />
+    <link rel="stylesheet" href="./FA-6/css/all.css" />
     <title>Document</title>
     <link rel="stylesheet" href="lists.css" />
     <script src="lists.js" defer></script>
