--- a/public/table.html
+++ b/public/table.html
@@ -10,10 +10,10 @@
     <link
       rel="icon"
       type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
+      sizes="96x96"
+      href="./images/icons8-star-96.png"
     />
-    <link rel="stylesheet" href="/public/FA-6/css/all.css" />
+    <link rel="stylesheet" href="./FA-6/css/all.css" />
   </head>
   <body>
     <main>
@@ -27,8 +27,8 @@
         <table id="pointsTable">
           <thead>
             <tr id="appendDate">
-              <th class="sticky itemCSS"></th>
-              <th class="total">Total</th>
+              <th class="sticky"></th>
+              <th class="stickyTotal">Total</th>
             </tr>
           </thead>
           <tbody>
