--- a/public/lists.html
+++ b/public/lists.html
@@ -34,6 +34,7 @@
       </header>
       <div id="collection"></div>
       <section>
+        <h4>Vocabulary words</h4>
         <button class="collapsible">Week 1</button>
         <div class="weekX">
           <ul>
@@ -82,7 +83,7 @@
           </button>
         </div>
       </section>
-      <section class="input">
+      <div class="input">
         <label for="key" class="hidden">Title:</label>
         <input type="text" name="key" id="key" placeholder="your title here" />
         <label class="hidden" for="word-list">Words:</label>
@@ -93,11 +94,22 @@
           cols="20"
           rows="10"
         ></textarea>
-      </section>
+      </div>
       <div class="buttons">
         <button id="instructions">Toggle instructions</button>
         <button class="createNew" id="createNew">New List</button>
       </div>
+      <section id="lists__section">
+        <h4>These are the lists</h4>
+        <div id="lists__box">
+          <p class="lists__item">
+            Week1 <span><input type="checkbox" /></span>
+          </p>
+          <p class="lists__item">
+            Week2 <span><input type="checkbox" /></span>
+          </p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
