--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
     <header>
       <a class="nav-link" href="index.html">🏠</a>
       <a class="nav-link" href="lists.html">📑</a>
+      <a class="nav-link" href="temporary.html">⌨️</a>
       <a class="nav-link" href="table.html">📅</a>
     </header>
     <main>
