--- a/public/lists.html
+++ b/public/lists.html
@@ -26,87 +26,143 @@
     <script src="lists.js" defer></script>
   </head>
   <body>
+    <header>
+      <a class="nav-link" href="index.html">🏠</a>
+      <a class="nav-link" href="lists.html">📑</a>
+      <a class="nav-link" href="temporary.html">⌨️</a>
+      <a class="nav-link" href="table.html">📅</a>
+    </header>
     <main>
-      <header>
-        <a class="nav-link" href="index.html">🏠</a>
-        <a class="nav-link" href="lists.html">📑</a>
-        <a class="nav-link" href="table.html">📅</a>
-      </header>
-      <div id="collection"></div>
-      <section>
-        <h4>Vocabulary words</h4>
-        <button class="collapsible">Week 1</button>
-        <div class="weekX">
-          <ul>
-            <li>burglar</li>
-            <li>chase</li>
-            <li>goal</li>
-            <li>fall over</li>
-            <li>drum</li>
-            <li>be thankful for</li>
-            <li>Morse code</li>
-            <li>distance</li>
-            <li>plane</li>
-            <li>light</li>
-            <li>Semaphore</li>
-            <li>be used to (+Ving)</li>
-            <li>postal system</li>
-            <li>flags</li>
-            <li>treasure</li>
-            <li>explosion</li>
-            <li>quill</li>
-            <li>be willing to</li>
-            <li>target</li>
-            <li>be worried about</li>
-            <li>nightmare</li>
-            <li>peacefully</li>
-            <li>hallway</li>
-            <li>lift</li>
-          </ul>
-          <button class="addToRoster">
-            <i class="fa-regular fa-circle-check"></i>
-          </button>
+      <section id="myLists">
+        <div>
+          <button class="collapsible">Week 1</button>
+          <div class="weekX">
+            <ul>
+              <li>burglar</li>
+              <li>chase</li>
+              <li>goal</li>
+              <li>fall over</li>
+              <li>drum</li>
+              <li>be thankful for</li>
+              <li>Morse code</li>
+              <li>distance</li>
+              <li>plane</li>
+              <li>light</li>
+              <li>Semaphore</li>
+              <li>be used to (+Ving)</li>
+              <li>postal system</li>
+              <li>flags</li>
+              <li>treasure</li>
+              <li>explosion</li>
+              <li>quill</li>
+              <li>be willing to</li>
+              <li>target</li>
+              <li>be worried about</li>
+              <li>nightmare</li>
+              <li>peacefully</li>
+              <li>hallway</li>
+              <li>lift</li>
+            </ul>
+            <button class="addToRoster">
+              <i class="fa-regular fa-circle-check"></i>
+            </button>
+          </div>
         </div>
-        <button class="collapsible">Week 2</button>
-        <div class="weekX">
-          <ul>
-            <li>unu</li>
-            <li>doi</li>
-            <li>trei</li>
-            <li>patru</li>
-            <li>patrucincisase</li>
-            <li>patrucincisase</li>
-            <li>patrucincisase</li>
-          </ul>
-          <button class="addToRoster">
-            <i class="fa-regular fa-circle-check"></i>
-          </button>
+        <div>
+          <button class="collapsible">Week 1</button>
+          <div class="weekX">
+            <ul>
+              <li>burglar</li>
+              <li>chase</li>
+              <li>goal</li>
+              <li>fall over</li>
+              <li>drum</li>
+              <li>be thankful for</li>
+              <li>Morse code</li>
+              <li>distance</li>
+              <li>plane</li>
+              <li>light</li>
+              <li>Semaphore</li>
+              <li>be used to (+Ving)</li>
+              <li>postal system</li>
+              <li>flags</li>
+              <li>treasure</li>
+              <li>explosion</li>
+              <li>quill</li>
+              <li>be willing to</li>
+              <li>target</li>
+              <li>be worried about</li>
+              <li>nightmare</li>
+              <li>peacefully</li>
+              <li>hallway</li>
+              <li>lift</li>
+            </ul>
+            <button class="addToRoster">
+              <i class="fa-regular fa-circle-check"></i>
+            </button>
+          </div>
+        </div>
+        <div>
+          <button class="collapsible">Week 1</button>
+          <div class="weekX">
+            <ul>
+              <li>burglar</li>
+              <li>chase</li>
+              <li>goal</li>
+              <li>fall over</li>
+              <li>drum</li>
+              <li>be thankful for</li>
+              <li>Morse code</li>
+              <li>distance</li>
+              <li>plane</li>
+              <li>light</li>
+              <li>Semaphore</li>
+              <li>be used to (+Ving)</li>
+              <li>postal system</li>
+              <li>flags</li>
+              <li>treasure</li>
+              <li>explosion</li>
+              <li>quill</li>
+              <li>be willing to</li>
+              <li>target</li>
+              <li>be worried about</li>
+              <li>nightmare</li>
+              <li>peacefully</li>
+              <li>hallway</li>
+              <li>lift</li>
+            </ul>
+            <button class="addToRoster">
+              <i class="fa-regular fa-circle-check"></i>
+            </button>
+          </div>
+        </div>
+        <div>
+          <button class="collapsible">Week 2</button>
+          <div class="weekX">
+            <ul>
+              <li>unu</li>
+              <li>doi</li>
+              <li>trei</li>
+              <li>patru</li>
+              <li>patrucincisase</li>
+              <li>patrucincisase</li>
+              <li>patrucincisase</li>
+            </ul>
+            <button class="addToRoster">
+              <i class="fa-regular fa-circle-check"></i>
+            </button>
+          </div>
         </div>
       </section>
-      <div class="input">
-        <label for="key" class="hidden">Title:</label>
-        <input type="text" name="key" id="key" placeholder="your title here" />
-        <label class="hidden" for="word-list">Words:</label>
-        <textarea
-          placeholder="Add your words separated by comma, space or a new line"
-          name="word list"
-          id="word-list"
-          cols="20"
-          rows="10"
-        ></textarea>
-      </div>
-      <div class="buttons">
-        <button id="instructions">Toggle instructions</button>
-        <button class="createNew" id="createNew">New List</button>
-      </div>
+
       <section id="lists__section">
         <h4>These are the lists</h4>
         <div id="lists__box">
           <p class="lists__item">
-            Week1 <span><input type="checkbox" /></span>
+            Week1 <span><input class="deleteList" type="checkbox" /></span>
           </p>
           <p class="lists__item">
-            Week2 <span><input type="checkbox" /></span>
+            Week2 <span><input class="deleteList" type="checkbox" /></span>
           </p>
         </div>
       </section>
