--- a/public/table.html
+++ b/public/table.html
@@ -20,6 +20,7 @@
       <header>
         <a class="nav-link" href="index.html">🏠</a>
         <a class="nav-link" href="lists.html">📑</a>
+        <a class="nav-link" href="temporary.html">⌨️</a>
         <a class="nav-link" href="table.html">📅</a>
       </header>
       <h1>Student's points</h1>
