--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,8 @@
 
       <!-- <h1 id="to-save">Students Points</h1> -->
       <section class="students">
-        <button class="studentJS itemCSS" name="Tony" id="@Tony">
-          Tony<span class="count"></span><span class="reduce">⭐</span>
+        <button class="studentJS itemCSS" name="Arthur" id="@Arthur">
+          Arthur<span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="studentJS itemCSS" id="@Jerry">
           Jerry
@@ -123,7 +123,9 @@
           <span class="count"></span><span class="reduce">⭐</span>
         </button>
         <button class="itemCSS" id="" disabled></button>
-        <button class="itemCSS" id="" disabled></button>
+        <button class="studentJS itemCSS" name="Tony" id="@Tony">
+          Tony<span class="count"></span><span class="reduce">⭐</span>
+        </button>
         <button class="studentJS itemCSS" id="@Jenny">
           Jenny<span class="count"></span><span class="reduce">⭐</span>
         </button>
