improved absent student functionality

--- a/public/lists.html
+++ b/public/lists.html
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div>
-          <button class="collapsible">Week 1</button>
+          <button class="collapsible">Week 3</button>
           <div class="weekX">
             <ul>
               <li>burglar</li>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div>
-          <button class="collapsible">Week 1</button>
+          <button class="collapsible">Week 4</button>
           <div class="weekX">
             <ul>
               <li>burglar</li>
@@ -158,12 +158,22 @@
       <section id="lists__section">
         <h4>These are the lists</h4>
         <div id="lists__box">
-          <p class="lists__item">
-            Week1 <span><input class="deleteList" type="checkbox" /></span>
+          <!-- <p class="lists__item">
+            Week1
+            <span
+              ><input title="delete" class="deleteList" type="checkbox"
+            /></span>
           </p>
           <p class="lists__item">
-            Week2 <span><input class="deleteList" type="checkbox" /></span>
-          </p>
+            Week2
+            <span
+              ><input
+                title="delete"
+                class="deleteList"
+                type="button"
+                value="erase"
+            /></span>
+          </p> -->
         </div>
       </section>
     </main>
