fixed table header and added automatic submit scores

--- a/public/table.html
+++ b/public/table.html
@@ -24,81 +24,81 @@
         <a class="nav-link" href="table.html">📅</a>
       </header>
       <h1>Student's points</h1>
-      <section id="section__pointsTable">
+      <div id="div__pointsTable">
         <table id="pointsTable">
           <thead>
             <tr id="appendDate">
-              <th class="sticky"></th>
-              <th class="stickyTotal">Total</th>
+              <th></th>
+              <th>Total</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td class="studentJS itemCSS sticky">Carissa</td>
+              <td class="studentJS itemCSS">Carissa</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Cathy</td>
+              <td class="studentJS itemCSS">Cathy</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Charlotte</td>
+              <td class="studentJS itemCSS">Charlotte</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Daniel</td>
+              <td class="studentJS itemCSS">Daniel</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Dora</td>
+              <td class="studentJS itemCSS">Dora</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Eason</td>
+              <td class="studentJS itemCSS">Eason</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Eddie</td>
+              <td class="studentJS itemCSS">Eddie</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Emma</td>
+              <td class="studentJS itemCSS">Emma</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Eva</td>
+              <td class="studentJS itemCSS">Eva</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Gina</td>
+              <td class="studentJS itemCSS">Gina</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Grace</td>
+              <td class="studentJS itemCSS">Grace</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Jenny</td>
+              <td class="studentJS itemCSS">Jenny</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Jerry</td>
+              <td class="studentJS itemCSS">Jerry</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Joanna</td>
+              <td class="studentJS itemCSS">Joanna</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Lucas</td>
+              <td class="studentJS itemCSS">Lucas</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Mia</td>
+              <td class="studentJS itemCSS">Mia</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Pauline</td>
+              <td class="studentJS itemCSS">Pauline</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Selina</td>
+              <td class="studentJS itemCSS">Selina</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Sharon</td>
+              <td class="studentJS itemCSS">Sharon</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Tanya</td>
+              <td class="studentJS itemCSS">Tanya</td>
             </tr>
             <tr>
-              <td class="studentJS itemCSS sticky">Tony</td>
+              <td class="studentJS itemCSS">Tony</td>
             </tr>
           </tbody>
         </table>
-      </section>
+      </div>
     </main>
   </body>
 </html>
