--- a/public/table.html
+++ b/public/table.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./basic.css" />
     <link rel="stylesheet" href="./table.css" />
     <script src="./table.js" defer></script>
     <link
@@ -18,10 +19,10 @@
   <body>
     <main>
       <header>
-        <a class="nav-link" href="index.html">🏠</a>
-        <a class="nav-link" href="lists.html">📑</a>
-        <a class="nav-link" href="temporary.html">⌨️</a>
-        <a class="nav-link" href="table.html">📅</a>
+        <a title="Home" class="nav-link" href="index.html">🏠</a>
+        <a title="Manage Lists" class="nav-link" href="lists.html">📑</a>
+        <a title="Make new list" class="nav-link" href="temporary.html">⌨️</a>
+        <a title="Past Scores" class="nav-link" href="table.html">📅</a>
       </header>
       <h1>Student's points</h1>
       <div id="div__pointsTable">
