--- a/public/temporary.html
+++ b/public/temporary.html
@@ -22,15 +22,16 @@
         ></script> -->
     <link rel="stylesheet" href="./FA-6/css/all.css" />
     <title>Document</title>
+    <link rel="stylesheet" href="basic.css" />
     <link rel="stylesheet" href="temporary.css" />
     <script src="temporary.js" defer></script>
   </head>
   <body>
     <header>
-      <a class="nav-link" href="index.html">🏠</a>
-      <a class="nav-link" href="lists.html">📑</a>
-      <a class="nav-link" href="temporary.html">⌨️</a>
-      <a class="nav-link" href="table.html">📅</a>
+      <a title="Home" class="nav-link" href="index.html">🏠</a>
+      <a title="Manage Lists" class="nav-link" href="lists.html">📑</a>
+      <a title="Make new list" class="nav-link" href="temporary.html">⌨️</a>
+      <a title="Past Scores" class="nav-link" href="table.html">📅</a>
     </header>
     <main>
       <div id="collection"></div>
