--- a/public/lists.html
+++ b/public/lists.html
@@ -177,7 +177,10 @@
           </p> -->
         </div>
       </section>
-      <div id="test"></div>
+      <div id="test">
+        <div id="para"></div>
+        <div id="erase"></div>
+      </div>
     </main>
   </body>
 </html>
