lists is a mess. start kk to do over

--- a/public/kk.html
+++ b/public/kk.html
@@ -23,8 +23,8 @@
     <link rel="stylesheet" href="./FA-6/css/all.css" />
     <title>Document</title>
     <link rel="stylesheet" href="basic.css" />
-    <link rel="stylesheet" href="lists.css" />
-    <script src="lists.js" defer></script>
+    <link rel="stylesheet" href="kk.css" />
+    <script src="kk.js" defer></script>
   </head>
   <body>
     <header>
