list box functionality completed

--- a/public/lists.html
+++ b/public/lists.html
@@ -158,9 +158,8 @@
 
       <section id="lists__section">
         <h4 title="Practice with these words">Lists in use</h4>
-        <div class="lists__box" id="lists__box"></div>
+        <div id="lists__box"></div>
       </section>
-      <a href="./kk.html">aici lucram de novo</a>
     </main>
   </body>
 </html>
