--- a/public/lists.html
+++ b/public/lists.html
@@ -154,6 +154,40 @@
             </button>
           </div>
         </div>
+        <div>
+          <button class="collapsible" id="5">Week 5</button>
+          <div class="weekX">
+            <ul>
+              <li>unu</li>
+              <li>doi</li>
+              <li>trei</li>
+              <li>patru</li>
+              <li>patrucincisase</li>
+              <li>patrucincisase</li>
+              <li>patrucincisase</li>
+            </ul>
+            <button class="addToRoster" title="Practice this list">
+              <i class="fa-regular fa-circle-check"></i>
+            </button>
+          </div>
+        </div>
+        <div>
+          <button class="collapsible" id="6">Week 6</button>
+          <div class="weekX">
+            <ul>
+              <li>unu</li>
+              <li>doi</li>
+              <li>trei</li>
+              <li>patru</li>
+              <li>patrucincisase</li>
+              <li>patrucincisase</li>
+              <li>patrucincisase</li>
+            </ul>
+            <button class="addToRoster" title="Practice this list">
+              <i class="fa-regular fa-circle-check"></i>
+            </button>
+          </div>
+        </div>
       </section>
 
       <section id="lists__section">
