--- a/public/table.html
+++ b/public/table.html
@@ -25,80 +25,113 @@
         <a title="Past Scores" class="nav-link" href="table.html">📅</a>
       </header>
       <h1>Student's points</h1>
+      <section class="tables">
+        <!-- <h2>Table Collection</h2>
+        <div>
+          <button>First half</button>
+          <button>Big test</button>
+          <button>Second half</button>
+          <button id="total">Total</button>
+        </div> -->
+      </section>
       <div id="div__pointsTable">
         <table id="pointsTable">
           <thead>
             <tr id="appendDate">
               <th></th>
+              <th>Test</th>
+              <th>1st Half</th>
               <th>Total</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td class="studentJS itemCSS">Arthur</td>
+              <td class="me">88%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Carissa</td>
+              <td class="me">84%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Cathy</td>
+              <td class="me">87%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Charlotte</td>
+              <td class="me">91%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Daniel</td>
+              <td class="me">96%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Dora</td>
+              <td class="me">96%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Eason</td>
+              <td class="me">78%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Eddie</td>
+              <td class="me">87%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Emma</td>
+              <td class="me">78%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Eva</td>
+              <td class="me">86%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Gina</td>
+              <td class="me">80%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Grace</td>
+              <td class="me">95%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Jenny</td>
+              <td class="me">70%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Jerry</td>
+              <td class="me">93%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Joanna</td>
+              <td class="me">94%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Lucas</td>
+              <td class="me">91%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Mia</td>
+              <td class="me">92%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Pauline</td>
+              <td class="me">93%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Selina</td>
+              <td class="me">57%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Sharon</td>
+              <td class="me">91%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Tanya</td>
+              <td class="me">87%</td>
             </tr>
             <tr>
               <td class="studentJS itemCSS">Tony</td>
+              <td class="me">66%</td>
             </tr>
           </tbody>
         </table>
